--- a/Code.ipynb
+++ b/Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f14ecb15",
    "metadata": {
     "execution": {
@@ -27,19 +27,31 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mnumpy\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mnp\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msns\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import preprocessing\n",
+    "\n",
     "le = preprocessing.LabelEncoder()\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn import linear_model\n",
-    "from sklearn.metrics import r2_score\n",
-    "from sklearn.metrics import mean_absolute_error , mean_absolute_percentage_error , mean_squared_error\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_absolute_percentage_error, mean_squared_error\n",
     "import statsmodels.api as sm"
    ]
   },
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1d4c5c88",
    "metadata": {
     "execution": {
@@ -80,7 +92,175 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>16884.92400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1725.55230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>4449.46200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>21984.47061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>3866.85520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1333</th>\n",
+       "      <td>50</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>10600.54830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1334</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.920</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>2205.98080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1335</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>36.850</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1629.83350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1336</th>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>2007.94500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1337</th>\n",
+       "      <td>61</td>\n",
+       "      <td>female</td>\n",
+       "      <td>29.070</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>29141.36030</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1338 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      age     sex     bmi  children smoker     region      charges\n",
+       "0      19  female  27.900         0    yes  southwest  16884.92400\n",
+       "1      18    male  33.770         1     no  southeast   1725.55230\n",
+       "2      28    male  33.000         3     no  southeast   4449.46200\n",
+       "3      33    male  22.705         0     no  northwest  21984.47061\n",
+       "4      32    male  28.880         0     no  northwest   3866.85520\n",
+       "...   ...     ...     ...       ...    ...        ...          ...\n",
+       "1333   50    male  30.970         3     no  northwest  10600.54830\n",
+       "1334   18  female  31.920         0     no  northeast   2205.98080\n",
+       "1335   18  female  36.850         0     no  southeast   1629.83350\n",
+       "1336   21  female  25.800         0     no  southwest   2007.94500\n",
+       "1337   61  female  29.070         0    yes  northwest  29141.36030\n",
+       "\n",
+       "[1338 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv('/kaggle/input/insurance/insurance.csv')\n",
     "data"
@@ -176,10 +356,10 @@
    "outputs": [],
    "source": [
     "for col in data.columns:\n",
-    "  fig, ax = plt.subplots()\n",
-    "  plt.title(f'{col} histogram')\n",
-    "  sns.histplot(data=data, x=col, ax=ax)\n",
-    "  plt.show()"
+    "    fig, ax = plt.subplots()\n",
+    "    plt.title(f'{col} histogram')\n",
+    "    sns.histplot(data=data, x=col, ax=ax)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -277,7 +457,7 @@
     "Y = data.charges\n",
     "data.drop('charges', axis=1, inplace=True)\n",
     "X = np.asarray(data)\n",
-    "X_Train, X_Test, Y_Train, Y_Test = train_test_split(X, Y, test_size= 0.20, random_state=42)"
+    "X_Train, X_Test, Y_Train, Y_Test = train_test_split(X, Y, test_size=0.20, random_state=42)"
    ]
   },
   {
@@ -519,7 +699,7 @@
    },
    "outputs": [],
    "source": [
-    "reg_score = r2_score(Y_Test , Y_Pred)\n",
+    "reg_score = r2_score(Y_Test, Y_Pred)\n",
     "reg_score"
    ]
   },
@@ -545,14 +725,14 @@
    },
    "outputs": [],
    "source": [
-    "mse = mean_squared_error(Y_Test , Y_Pred)\n",
+    "mse = mean_squared_error(Y_Test, Y_Pred)\n",
     "print(\"mse: \", mse)\n",
-    "mape = mean_absolute_percentage_error(Y_Test , Y_Pred)\n",
+    "mape = mean_absolute_percentage_error(Y_Test, Y_Pred)\n",
     "print(\"mape: \", mape)\n",
-    "mae = mean_absolute_error(Y_Test , Y_Pred)\n",
+    "mae = mean_absolute_error(Y_Test, Y_Pred)\n",
     "print(\"mae: \", mae)\n",
-    "reg_mse = mean_squared_error(Y_Test , Y_Pred)\n",
-    "reg_rmse  = np.sqrt(reg_mse)\n",
+    "reg_mse = mean_squared_error(Y_Test, Y_Pred)\n",
+    "reg_rmse = np.sqrt(reg_mse)\n",
     "print(\"reg_mse: \", reg_rmse)"
    ]
   },
@@ -579,7 +759,7 @@
    "outputs": [],
    "source": [
     "X2 = sm.add_constant(X_Train)\n",
-    "est = sm.OLS(Y_Train , X2)\n",
+    "est = sm.OLS(Y_Train, X2)\n",
     "est2 = est.fit()"
    ]
   },
